--- a/product-manager.html
+++ b/product-manager.html
@@ -40,8 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ooF1afwY&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nGQlqMwy'>Freedom Financial Network Careers - Product Manager, Analytics</a></h5> 
+<h5><a href='https://jobs.lever.co/geckoboard/5d91d4f0-ccd8-4c83-9b79-dc13ff88c468?lever-via=DB6OM-w0UX'>Geckoboard - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/hcss/jobs/1941595'>Job Application for Senior Growth Product Manager - Sales/Marketing at HCSS</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ooF1afwY&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nGQlqMwy'>Freedom Financial Network Careers - Product Manager, Analytics</a></h5> 
+<p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/kjssi3eih7jhcc9fppb4zacapa'>Product Manager | Opportunity Portal</a></h5> 
@@ -96,7 +104,7 @@
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TRICENTIS/743999698474016-product-owner-sap'>TRICENTIS Product Owner SAP | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TRICENTIS/743999698474016-product-owner-sap'>TRICENTIS Product Owner SAP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -108,7 +116,7 @@
 <p><span class="badge badge-light">Sunnyvale California Kitchener-Waterloo Canada  Sunnyvale California Kitchener-Waterloo Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4491874002'>Job Application for Technical Product Manager, SOC Platform at Arctic Wolf Networks</a></h5> 
+<h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4491874002'>Job Application for Technical Product Manager, SOC Platform at Arctic Wolf Networks</a></h5> 
 <p><span class="badge badge-light">Waterloo Ontario, Canada Utah, United States Sunnyvale United States  Kitchener-Waterloo Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -120,7 +128,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/discord/jobs/4002985002'>Job Application for Product Manager, Internal Products at Discord</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/discord/jobs/4002985002'>Job Application for Product Manager, Internal Products at Discord</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -132,7 +140,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/axon/81e80557-ff55-402d-895b-438bbdda1141'>Axon - Principal Product Manager - Axon Records</a></h5> 
+<h5><a href='https://jobs.lever.co/axon/81e80557-ff55-402d-895b-438bbdda1141'>Axon - Principal Product Manager - Axon Records</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -196,7 +204,7 @@
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ayla-networks/job/onAsbfwk'>Ayla Networks Careers - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ayla-networks/job/onAsbfwk'>Ayla Networks Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -204,7 +212,7 @@
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://producthire.net/job/sr-product-manager-big-data-platform/'>Sr. Product Manager, Big Data Platform | PRODUCTHIRE.NET</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/sr-product-manager-big-data-platform/'>Sr. Product Manager, Big Data Platform | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -220,7 +228,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -228,7 +236,7 @@
 <p><span class="badge badge-light">Alpharetta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/am6o2wHuzq/Product-Manager-Mobile-Lehi-UT'>Product Manager - Mobile  (Lehi, UT) - MedBridge - Career Page</a></h5> 
+<h5><a href='http://medbridge.applytojob.com/apply/am6o2wHuzq/Product-Manager-Mobile-Lehi-UT'>Product Manager - Mobile  (Lehi, UT) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light">Seattle Lehi, UT     Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -252,7 +260,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o9Tsbfwp'>Tenable Careers - Senior Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o9Tsbfwp'>Tenable Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -328,7 +336,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999698584056-product-owner-m-w-d-team-checkout-und-digital-payments'>E. Breuninger GmbH & Co. Product Owner (m/w/d) Team Checkout und Digital Payments | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999698584056-product-owner-m-w-d-team-checkout-und-digital-payments'>E. Breuninger GmbH & Co. Product Owner (m/w/d) Team Checkout und Digital Payments | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -410,7 +418,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dept/jobs/1935253'>Job Application for Senior Product Owner - Technology (m/w/div) at Dept</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dept/jobs/1935253'>Job Application for Senior Product Owner - Technology (m/w/div) at Dept</a></h5> 
 <p><span class="badge badge-light">Hamburg  Hamburg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -438,16 +446,6 @@
 <hr/>
 <h5><a href='https://kochcareers.referrals.selectminds.com/jobs/product-manager-engineer-separation-technology-35731'>Product Manager/Engineer- Separation Technology - Koch Industries Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://whatfix101.recruiterbox.com/jobs/fk03o2r'>
-    Senior Product Designer at Whatfix
-</a></h5> 
-<p><span class="badge badge-light">Bengaluru</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999698547791-product-manager'>ShopUp Product Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Dhaka, Bangladesh</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
